# genetracks

./: .gitignore  Cargo.toml  Genetracks.ipynb  README.md  pyproject.toml  setup.py
.github/workflows/: pylint.yml
examples/: Genetracks.ipynb
genetracks/: __init__.py  elements.py  lib.py  plasmid.py  test.py
src/: lib.rs
src/genetracks/: __init__.py  colors.py  elements.py  genetracks.py  plasmid.py
tests/: test.py  test_elements.py
