[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genetracks"
version = "0.6.0"
description = "Diagrams for genomic data"
authors = [
    {name = "jeff-k", email="jeff_k@fastmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "3.8"

[project.urls]
"Homepage" = "http://github.com/jeff-k/genetracks"
"Bug Tracker" = "http://github.com/jeff-k/genetracks/issues"

[options]
packages = [
    { include = "genetracks" },
]
